[package]
name = "bitfield-layout"
version = "0.4.0"
edition = "2018"
authors = ["Mikhail Bratchikov"]
license = "MIT"
description = "Yet another bitfield handling implementation"
#homepage =
documentation = "https://docs.rs/bitfield-layout"
repository = "https://github.com/pepyaka/bitfield-layout"
readme = "README.md"
keywords = ["bitfield", "bitflags"]
categories = ["no-std"]

[dependencies]
either = "1.6"

[dev-dependencies]
pretty_assertions = "0.7"
